# autospider

./: .env.e2e  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  README.md  README_en.md  actions.py  alembic.ini  check_elements.py  config.py  export_to_db.py  main_graph.mmd  mark_id_validator.py  prompt 模板渲染工具--prompt_template.py.md  protocol.py  pyproject.toml  requirements.txt  spider_data.db  task.md.resolved  test.py  test_field_crawler.py  test_tab_click.py  南传ERP.py
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.task_tracker/: 2026-04-19T16-28-33_read_refactor.md  2026-04-19T16-37-12_continue_refactor_stage2.md  2026-04-19T16-50-15_chat_context_phase2A_closure.md  2026-04-19T17-00-06_continue_refactor_stage2_singlethread.md  2026-04-19T18-31-29_continue_stage2_planning_cleanup.md  2026-04-19T18-57-34_stage_unstaged_changes.md  2026-04-19T19-11-53_slice_stage2_into_atomic_commits.md  2026-04-19T21-18-07_continue_stage2_collection_repositories.md  2026-04-19T22-03-11_continue_stage2_collection_adapters.md  2026-04-19T22-38-08_complete_stage2_collection.md  2026-04-20_1310_complete_legacy_migration.md
.task_tracker/completed/: 2026-04-19T17-39-53_continue_stage2_planning.md  2026-04-19T20-43-25_continue_stage2_remaining.md  2026-04-19T21-38-30_continue_stage2_field_xpath_repositories.md  2026-04-19T22-03-11_continue_stage2_collection_adapters.md
.trae/documents/: 为每个源代码文件创建独立文档 (1).md  为每个源代码文件创建独立文档.md
common/browser_manager/: interaction.py
common/utils/: file_utils.py
docs/: CHECKPOINT_SUMMARY.md  PROMPT_MANAGEMENT.md  README.md  REDIS_USAGE.md  architecture_flowchart.md  cli.py.md  crawl_delay_config.md  crawl_delay_final_fix.md  crawl_delay_fix.md  crawl_delay_fix_v2.md  crawl_delay_implementation.md  element_verification.md  execplan-channel-pipeline.md  keyboard_interrupt_cleanup.md  li_element_fix.md  pagination_feature.md  pagination_implementation_summary.md  pagination_optimization.md  pagination_quickstart.md  prompt_refactor_summary.md  prompt_template_guide.md  redis_logical_delete.md  redis_manager_refactor.md  url_collection_workflow.md  url_collector_example.md  verification_error_feedback.md  workflow_overview.md  断点重续优化说明.md  断点重续说明.md
docs/browser_manager/: README.md  engine.py.md  interaction.py.md
docs/common/: README.md  config.py.md  constants.py.md  exceptions.py.md  logger.py.md  protocol.py.md  types.py.md  validators.py.md
docs/crawler/: README.md  base_collector.py.md  batch_collector.py.md  url_collector.py.md
docs/extractor/: README.md  config_generator.py.md
docs/field/: README.md  batch_field_extractor.py.md  field_extractor.py.md  models.py.md
docs/pipeline/: runner.py.md
docs/prompts/: README.md
docs/utils/: README.md  file_utils.py.md  file_utils_async.py.md  prompt_template.py.md
legacy/: actions_legacy.py  mark_id_validator_legacy.py  protocol_legacy.py
prompts/: README.md  decider.yaml  disambiguate_by_text.yaml  field_extractor.yaml  planner.yaml  script_generator.yaml  url_collector.yaml
refactor/: 01-architecture.md  02-migration-map.md  03-contracts.md  04-execution-plan.md  05-guardrails.md  README.md
refactor/_generated/: context-boundaries-phase1.json
refactor/adr/: 0001-adopt-light-ddd.md  0002-redis-as-queue-and-store.md  0003-run-artifact-layout.md  0004-import-linter-contracts.md  0005-context-boundary-freeze.md
scripts/: _gate_file_size.py  verify.ps1  verify.sh
skills/ygp.gdzwfw.gov.cn/: SKILL.md
src/autospider/: __init__.py  __main__.py  batch_collector.py  cli.py  config.py  config_generator.py  mark_id_validator.py  persistence.py  redis_manager.py  script_generator.py  types.py  url_collector.py  url_collector_backup.py
tests/: check_delay_config.py  cli_test_support.py  conftest.py  test_benchmark_runtime.py  test_checkpoint.py  test_cli_benchmark.py  test_cli_doctor.py  test_cli_redis_only.py  test_control_state_preservation.py  test_db_schema_compatibility.py  test_db_url_normalization.py  test_decision_context.py  test_decision_context_wiring.py  test_entry_nodes_runtime_handoff.py  test_execution_handoff.py  test_execution_request_resume_mode.py  test_failure_classifier.py  test_feedback_nodes.py  test_graph_exports.py  test_graph_runner.py  test_graph_state_access.py  test_llm_streaming.py  test_llm_trace.py  test_logger_bootstrap.py  test_main_graph.py  test_navigation_decision_context.py  test_pipeline_finalization.py  test_pipeline_learning_persistence.py  test_pipeline_result_classification_wrapper.py  test_pipeline_run_store.py  test_pipeline_runner_intervention.py  test_pipeline_runtime_integration.py  test_pipeline_runtime_store.py  test_planner_world_model.py  test_planning_runtime_failure_records.py  test_prompt_templates.py  test_random_delay.py  test_redis.py  test_redis_channel_behavior.py  test_redis_channel_runtime_metrics.py  (+10 more)
tests/benchmark/: __init__.py  conftest.py  evaluator.py  metrics.py  reporter.py  runner.py  test_all_scenario_data.py  test_benchmark.py  test_benchmark_entrypoint_contract.py  test_evaluator.py  test_metrics.py  test_mock_server.py  test_mock_site_all.py  test_mock_site_products.py  test_products_scenario_data.py  test_reporter.py  test_runner.py  test_scenario_schema.py
tests/composition/: test_container.py  test_event_propagation.py
tests/contracts/: __init__.py  pipeline_artifacts.py  pipeline_fakes.py  pipeline_runtime.py  test_cli_surface.py  test_context_boundary_freeze.py  test_dev_toolchain_lock.py  test_output_layout.py  test_redis_keys_surface.py  test_result_envelope.py
tests/e2e/: README.md  __init__.py  conftest.py  contracts.py  env.py  test_graph_e2e.py
tests/unit/: test_actions_go_back_tab.py  test_aggregator.py  test_batch_xpath_explore_upgrade.py  test_browser_engine.py  test_chat_graph_state_persistence.py  test_chat_interrupt_flow.py  test_checkpoint_idempotency.py  test_constants.py  test_detail_field_rule_profiles.py  test_detail_page_worker.py  test_dispatcher.py  test_entry_node_param_cleanup.py  test_exceptions.py  (+34 more)
(+915 files in other folders)
