[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autospider"
version = "0.1.0"
description = "A pure-vision browser agent using LangGraph and Set-of-Mark (SoM) prompting"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AutoSpider", email = "autospider@example.com" }]

dependencies = [
    "langgraph>=1.0.5",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "pillow>=12.1.0",
    "rich>=14.2.0",
    "typer>=0.21.0",
    "python-dotenv>=1.2.1",
    "loguru>=0.7.3",
    "ddddocr>=1.5.6",
    "opencv-python-headless>=4.12.0.88",
    "playwright-stealth>=2.0.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
redis = [
    "redis>=7.1.0",
    "langgraph-checkpoint-redis>=0.3.6",
]
db = [
    "alembic>=1.13.2",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.45",
    "pymysql>=1.1.2",
    "openpyxl>=3.1.5",
]
spider = [
    "scrapy>=2.13.4",
    "scrapy-playwright>=0.0.44",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "import-linter>=2.0",
    "syrupy>=4.0",
    "jsonschema>=4.0",
    "fakeredis>=2.20",
    "pre-commit>=3.5",
    "vulture>=2.10",
    "deptry>=0.12",
]
all = [
    "autospider[redis,db,spider,dev]",
]

[project.scripts]
autospider = "autospider.interface.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autospider"]

[tool.hatch.build.targets.sdist]
include = ["src/autospider"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tmp*"]
markers = [
    "smoke: fast developer smoke tests",
    "benchmark: benchmark scenario and benchmark CLI tests",
    "e2e: end-to-end graph tests",
    "integration: integration tests requiring Redis/PG",
]
